--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 Project readme file
 
 Hello from Brennan!
+
+Please check google docs!
+https://docs.google.com/document/d/1I8Py3BsGYLaH60_DFUYMHIgyLmMSQJmXWuz8k1A-AmU/edit?pli=1
+
+Write use cases and draw mock ups by Web, Mar 7.
