--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Project readme file
 
 Hello from Brennan!
+
+If the original project is forked, forked project has to pull request to announce the "changes"
