check out instruction

--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Project readme file
 Hello from Brennan!
 
 If the original project is forked, forked project has to pull request to announce the "changes"
+
+## check out github repo (windows user)
