--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Hello from Brennan!
 If the original project is forked, forked project has to pull request to announce the "changes"
 
 ## check out github repo (windows user)
+1. To download 'git' windows version from "http://git-scm.com/"
+2. To install git windows version on your computer, and to choose "bash" as terminal during installation.
