--- a/README
+++ b/README
@@ -23,3 +23,5 @@ Apr 6, 2012
 		--Disable to remove myself
 	Add some documentation
 	
+	!!Note that you have to set up user accounts again because of hash function!!
+	
